--- a/newsevaluator/public/index.html
+++ b/newsevaluator/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="width:100vw; height:100vh; background-color: #efe7e7;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
