--- a/newsevaluator/public/index.html
+++ b/newsevaluator/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>News AI</title>
   </head>
   <body style="width:100vw; height:100vh; background-color: #efe7e7;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
